tests/Semantic/test_2_r12.out
Error type 12 at Line 15: indexing by non-integer
Error type 5 at Line 15: unmatching type on both sides of assignment
