tests/Semantic/test_2_r12.spl
int test_2_r12()
{
  float arr1[10];
  float arr2[10];
  float a = 1.1;
  int i = 0;
  while (i < 10)
  {
    arr1[i] = a;
    a = a * a;
  }
  i = 0;
  while (i < 10)
  {
    arr2[arr1[i]] = a;
  }
  return 0;
}
